<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:fillViewport="true"
    android:fitsSystemWindows="true">
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scroll"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="16dp">


        <ImageView
            android:id="@+id/logo"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:src="@drawable/logo">

        </ImageView>
        <com.github.florent37.materialtextfield.MaterialTextField
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            app:mtf_cardCollapsedHeight="3dp"
            app:mtf_image="@drawable/ic_person_black_24dp"
            app:mtf_labelColor="@color/colorApp">


            <EditText
                android:id="@+id/editTextEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/username"
                android:singleLine="true"
                android:textColor="@color/colorBlack"
                android:inputType="textEmailAddress"/>
        </com.github.florent37.materialtextfield.MaterialTextField>

        <com.github.florent37.materialtextfield.MaterialTextField
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            app:mtf_cardCollapsedHeight="3dp"
            app:mtf_image="@drawable/ic_lock_open_black_24dp"
            app:mtf_labelColor="@color/colorApp" >

            <EditText
                android:id="@+id/editTextPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/pass"
                android:inputType="textPassword"
                android:singleLine="true"
                android:textColor="@color/colorBlack" />

        </com.github.florent37.materialtextfield.MaterialTextField>
        <CheckBox
            android:id="@+id/acknowlege"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="Remember me"
            android:textColor="@color/colorApp"
            android:theme="@style/MychceckboxColor"/>


        <Button
            android:id="@+id/loginButton"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="10dp"
            android:onClick="onButtonClick"
            android:text="@string/sign_in"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/largefont_size"
            android:background="@drawable/roudedbutton"/>
    </LinearLayout>
    </ScrollView>
</RelativeLayout>
